<resources>
    <string name="app_name">QuickDevFramework</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="press_again_exit">press again to exit</string>
    <string name="sample_bottom_dialog_desc">this is a custom bottom view \n click to dismiss</string>
    <string name="sample_dialog_message">simple dialog messages</string>
    <string name="sample_dialog_title">title</string>
    <string name="sample_positive">cus positive</string>
    <string name="positive_click">positive clicked</string>
    <string name="sample_negative">cus negative</string>
    <string name="negative_click">negative click</string>
    <string name="button_test_empty_view">test empty view</string>
    <string name="btn_header_footer">header and footer</string>
    <string name="default_header">default header</string>
    <string name="default_footer">default footer</string>
    <string name="request_sample">request sample</string>
    <string name="rationale_before_request">rationale before request</string>
    <string name="action_on_prohibited">set action on prohibited</string>

    <string name="exit_application">exit application</string>
    <string name="restart_application">restart application</string>
    <string name="get_application_name">get application name</string>
    <string name="get_application_version">get application version</string>
    <string name="get_application_signature">get application signature</string>
    <string name="get_application_icon_drawable">get application icon drawable</string>
    <string name="other_api">other api</string>
    <string name="is_app_running">is app running</string>
    <string name="is_app_foreground">is app foreground</string>
    <string name="is_exist_sd_card">is exist sd card</string>
    <string name="has_file_permission">has file permission</string>
    <string name="get_system_boot_time">get system boot time</string>

    <string name="toast_permission_denied"> permission has been disabled. please go to Settings to open it</string>
</resources>
