<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical">

    <Button
        android:id="@+id/btnGetAppName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/get_application_name"/>

    <TextView
        android:id="@+id/tvAppName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnGetAppVersion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/get_application_version"/>

    <TextView
        android:id="@+id/tvAppVersion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnGetSystemBootTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/get_system_boot_time"/>

    <TextView
        android:id="@+id/tvSystemBootTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnExitApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exit_application"/>

    <Button
        android:id="@+id/btnRestartApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/restart_application"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/other_api"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/get_application_icon_drawable"/>

        <ImageView
            android:id="@+id/ivAppIcon"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_width="48dp"
            android:layout_height="48dp" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvIsAppRunning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/is_app_running"/>

    <TextView
        android:id="@+id/tvIsAppForeground"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/is_app_foreground"/>

    <TextView
        android:id="@+id/tvCPUName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="cpuName:"/>

</LinearLayout>