<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_permission_api"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".sample.frameworkapi.PermissionApiFragment">

    <Button
        android:id="@+id/btnRequestSample"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/request_sample"/>

    <Button
        android:id="@+id/btnRequestWithRationale"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rationale_before_request"/>

    <Button
        android:id="@+id/btnDoOnProhibited"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_on_prohibited"/>

    <Button
        android:id="@+id/btnRequestAlertWindow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="request SYSTEM_ALERT_WINDOW" />

    <Button
        android:id="@+id/btnRequestWriteSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="request WRITE_SETTINGS"/>

</LinearLayout>
